--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ body {
       <h2 class="h2">Contacto</h2>
       <p class="meta">📱 +57 302 338 7884</p>
       <p class="meta">✉️ <a href="mailto:jd-torralvo@hotmail.com">jd-torralvo@hotmail.com</a></p>
-      <p>Connect with me on <a href="https://www.linkedin.com/in/jadder-torralvo/?originalSubdomain=co" target="_blank">LinkedIn</a></p>
+      <p> Conecte conmigo en LinkedIn <a href="https://www.linkedin.com/in/jadder-torralvo/?originalSubdomain=co" target="_blank">LinkedIn</a></p>
       <p class="meta">📍 Cartagena, Colombia</p>
     </div>
   </section>
