--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body {
       <img src="jdprofile.jpeg" alt="Jadder Torralvo" class="profile-pic">
       <div>
         <h1>Jadder Torralvo</h1>
-        <p>Key Account Manager • Turismo Náutico — Cartagena</p>
+        <p>Adminitrador Turistico y Hotelero</p>
       </div>
     </div>
     <nav class="nav">
