--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Jadder Torralvo — Administrador Turistico y Hotelero</title>
+<title>Jadder Torralvo | Key Account Manager | Administrador Turistico y Hotelero</title>
 <style>
 :root {
   --bg-light: #ffffff;
