--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@ body {
     <div class="brand">
       <img src="jdprofile.jpeg" alt="Jadder Torralvo" class="profile-pic">
       <div>
-        <h1>Jadder Torralvo</h1>
-        <p>Adminitrador Turistico y Hotelero</p>
+        <h1>Jadder Torralvo | </h1>
+        <p>| Key Account Manager | </p>
+        <p>| Administrador Turistico y Hotelero| </p>
       </div>
     </div>
     <nav class="nav">
