--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ body {
       <img src="jdprofile.jpeg" alt="Jadder Torralvo" class="profile-pic">
       <div>
         <h1>Jadder Torralvo | </h1>
-        <p>| Key Account Manager | </p>
-        <p>| Administrador Turistico y Hotelero| </p>
+        <p>Key Account Manager | </p>
+        <p>Administrador Turistico y Hotelero |</p>
       </div>
     </div>
     <nav class="nav">
